--- a/.github/workflows/genera-amp.yml
+++ b/.github/workflows/genera-amp.yml
@@ -2,7 +2,6 @@ name: Genera Pagine AMP
 
 on:
   workflow_dispatch:
-    # esecuzione manuale
   push:
     branches:
       - main
@@ -12,76 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      - name: Genera pagine AMP
+      - name: Installa dipendenze (xml2js)
         run: |
-          node <<'EOF'
-          const fs = require('fs');
-          const path = require('path');
-          const https = require('https');
+          npm init -y
+          npm install xml2js
 
-          const ampDir = 'amp';
-          const RSS_URL = 'https://feeds.feedburner.com/brunorachiele/ZOU113SCMgV';
-
-          function fetchRSS(url) {
-            return new Promise((resolve, reject) => {
-              https.get(url, (res) => {
-                let data = '';
-                res.on('data', chunk => data += chunk);
-                res.on('end', () => resolve(data));
-              }).on('error', err => reject(err));
-            });
-          }
-
-          function parseRSS(xml) {
-            // Estrae solo link e title con regex semplice
-            const itemRegex = /<item>([\s\S]*?)<\/item>/g;
-            const titleRegex = /<title>(.*?)<\/title>/;
-            const linkRegex = /<link>(.*?)<\/link>/;
-            const items = [];
-            let match;
-            while(match = itemRegex.exec(xml)) {
-              const block = match[1];
-              const titleMatch = titleRegex.exec(block);
-              const linkMatch = linkRegex.exec(block);
-              if(titleMatch && linkMatch) {
-                items.push({ title: titleMatch[1], link: linkMatch[1] });
-              }
-            }
-            return items;
-          }
-
-          (async () => {
-            try {
-              if(!fs.existsSync(ampDir)) throw new Error('Cartella amp/ non trovata. Creala manualmente prima.');
-              const xml = await fetchRSS(RSS_URL);
-              const items = parseRSS(xml);
-
-              for(const item of items) {
-                const slug = item.link.replace(/^https?:\/\/[^\/]+\/|\/$/g,'');
-                const filePath = path.join(ampDir, slug+'.html');
-                let html = fs.readFileSync('article.html', 'utf8');
-                html = html.replace(/{{title}}/g, item.title)
-                           .replace(/{{link}}/g, item.link)
-                           .replace(/{{pubDate}}/g, '')
-                           .replace(/{{isoDate}}/g, '');
-                fs.writeFileSync(filePath, html, 'utf8');
-                console.log('Generata pagina AMP:', filePath);
-              }
-
-            } catch(e) {
-              console.error('Errore nella generazione AMP:', e);
-              process.exit(1);
-            }
-          })();
-          EOF
+      - name: Genera pagine AMP
+        run: node scripts/genera-amp.js
 
       - name: Commit e push
         run: |
