--- a/.github/workflows/genera-amp.yml
+++ b/.github/workflows/genera-amp.yml
@@ -18,13 +18,49 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Installa dipendenze (xml2js)
+      - name: Genera pagine AMP dai feed RSS
         run: |
-          npm init -y
-          npm install xml2js
+          node -e "
+          const fs = require('fs');
+          const path = require('path');
+          const https = require('https');
 
-      - name: Genera pagine AMP
-        run: node scripts/genera-amp.js
+          const ampDir = 'amp';
+          if (!fs.existsSync(ampDir)) throw new Error('Cartella amp/ non trovata. Creala manualmente!');
+
+          const RSS_URL = 'https://feeds.feedburner.com/brunorachiele/ZOU113SCMgV';
+
+          function fetchRSS(url) {
+            return new Promise((resolve, reject) => {
+              https.get(url, res => {
+                let data = '';
+                res.on('data', chunk => data += chunk);
+                res.on('end', () => resolve(data));
+              }).on('error', err => reject(err));
+            });
+          }
+
+          fetchRSS(RSS_URL).then(xml => {
+            const items = [];
+            xml.replace(/<item>([\\s\\S]*?)<\\/item>/g, (_, itemBlock) => {
+              const titleMatch = /<title>(.*?)<\\/title>/.exec(itemBlock);
+              const linkMatch = /<link>(.*?)<\\/link>/.exec(itemBlock);
+              if(titleMatch && linkMatch) items.push({title: titleMatch[1], link: linkMatch[1]});
+            });
+
+            for(const item of items) {
+              const slug = item.link.replace(/^https?:\\/\\/[^\\/]+\\/|\\/$/g,'');
+              const filePath = path.join(ampDir, slug + '.html');
+              let html = fs.readFileSync('article.html','utf8');
+              html = html.replace(/{{title}}/g,item.title)
+                         .replace(/{{link}}/g,item.link)
+                         .replace(/{{pubDate}}/g,'')
+                         .replace(/{{isoDate}}/g,'');
+              fs.writeFileSync(filePath, html,'utf8');
+              console.log('Generata pagina AMP:', filePath);
+            }
+          }).catch(err => { console.error(err); process.exit(1); });
+          "
 
       - name: Commit e push
         run: |
