--- a/.github/workflows/genera-amp.yml
+++ b/.github/workflows/genera-amp.yml
@@ -1,73 +1,44 @@
-name: Genera Pagine AMP
+- name: Genera pagine AMP dai feed RSS
+  run: |
+    node -e "
+    const fs = require('fs');
+    const path = require('path');
+    const https = require('https');
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+    const ampDir = 'amp';
+    if (!fs.existsSync(ampDir)) throw new Error('Cartella amp/ non trovata!');
 
-jobs:
-  build-amp:
-    runs-on: ubuntu-latest
+    const RSS_URL = 'https://feeds.feedburner.com/brunorachiele/ZOU113SCMgV';
 
-    steps:
-      - uses: actions/checkout@v3
+    function fetchRSS(url) {
+      return new Promise((resolve,reject)=>{
+        https.get(url,res=>{
+          let data='';
+          res.on('data',chunk=>data+=chunk);
+          res.on('end',()=>resolve(data));
+        }).on('error',err=>reject(err));
+      });
+    }
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+    fetchRSS(RSS_URL).then(xml=>{
+      const items=[];
+      xml.replace(/<item>([\\s\\S]*?)<\\/item>/g,(_,block)=>{
+        const title=/\<title\>(.*?)\<\/title\>/.exec(block);
+        const link=/\<link\>(.*?)\<\/link\>/.exec(block);
+        if(title && link) items.push({title:title[1], link:link[1]});
+      });
 
-      - name: Genera pagine AMP dai feed RSS
-        run: |
-          node -e "
-          const fs = require('fs');
-          const path = require('path');
-          const https = require('https');
+      for(const item of items){
+        const slug=item.link.replace(/^https?:\\/\\/[^\\/]+\\/|\\/$/g,'');
+        const filePath=path.join(ampDir, slug+'.html');
+        let html=fs.readFileSync('article.html','utf8');
+        html=html.replace(/{{title}}/g,item.title)
+                 .replace(/{{link}}/g,item.link)
+                 .replace(/{{pubDate}}/g,'')
+                 .replace(/{{isoDate}}/g,'');
+        fs.writeFileSync(filePath,html,'utf8');
+        console.log('Generata pagina AMP:',filePath);
+      }
 
-          const ampDir = 'amp';
-          if (!fs.existsSync(ampDir)) throw new Error('Cartella amp/ non trovata. Creala manualmente!');
-
-          const RSS_URL = 'https://feeds.feedburner.com/brunorachiele/ZOU113SCMgV';
-
-          function fetchRSS(url) {
-            return new Promise((resolve, reject) => {
-              https.get(url, res => {
-                let data = '';
-                res.on('data', chunk => data += chunk);
-                res.on('end', () => resolve(data));
-              }).on('error', err => reject(err));
-            });
-          }
-
-          fetchRSS(RSS_URL).then(xml => {
-            const items = [];
-            xml.replace(/<item>([\\s\\S]*?)<\\/item>/g, (_, itemBlock) => {
-              const titleMatch = /<title>(.*?)<\\/title>/.exec(itemBlock);
-              const linkMatch = /<link>(.*?)<\\/link>/.exec(itemBlock);
-              if(titleMatch && linkMatch) items.push({title: titleMatch[1], link: linkMatch[1]});
-            });
-
-            for(const item of items) {
-              const slug = item.link.replace(/^https?:\\/\\/[^\\/]+\\/|\\/$/g,'');
-              const filePath = path.join(ampDir, slug + '.html');
-              let html = fs.readFileSync('article.html','utf8');
-              html = html.replace(/{{title}}/g,item.title)
-                         .replace(/{{link}}/g,item.link)
-                         .replace(/{{pubDate}}/g,'')
-                         .replace(/{{isoDate}}/g,'');
-              fs.writeFileSync(filePath, html,'utf8');
-              console.log('Generata pagina AMP:', filePath);
-            }
-          }).catch(err => { console.error(err); process.exit(1); });
-          "
-
-      - name: Commit e push
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add amp/
-          git commit -m 'Aggiornamento automatico pagine AMP' || echo 'Nessuna modifica'
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    }).catch(err=>{console.error(err); process.exit(1);});
+    "
