--- a/.github/workflows/genera-amp.yml
+++ b/.github/workflows/genera-amp.yml
@@ -29,7 +29,7 @@ jobs:
           const ampDir = 'amp';
           const outDir = 'output';
 
-          if (!fs.existsSync(ampDir)) throw new Error('Cartella amp/ non trovata!');
+          if (!fs.existsSync(ampDir)) fs.mkdirSync(ampDir);
           if (!fs.existsSync(outDir)) fs.mkdirSync(outDir);
 
           const RSS_URL = 'https://feeds.feedburner.com/brunorachiele/ZOU113SCMgV';
