--- a/.github/workflows/genera-amp.yml
+++ b/.github/workflows/genera-amp.yml
@@ -1,10 +1,10 @@
 name: Genera Pagine AMP + Sitemap + Ultimi articoli
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # puoi eseguirlo manualmente
   push:
     branches:
-      - main
+      - main         # si esegue anche ad ogni push sul main
 
 jobs:
   build-amp:
@@ -19,15 +19,20 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Esegui genera-amp.js
+      - name: Installa dipendenze (se serve)
+        run: |
+          npm init -y   # solo se vuoi usare package.json
+          # al momento non serve alcun pacchetto esterno
+
+      - name: Genera pagine AMP, sitemap e ultimi articoli
         run: node scripts/genera-amp.js
 
-      - name: Commit e push
+      - name: Commit e push modifiche
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add amp/ output/
-          git commit -m 'Aggiornamento automatico pagine AMP + sitemap + ultimi articoli' || echo 'Nessuna modifica'
+          git commit -m "Aggiornamento automatico pagine AMP + sitemap + ultimi articoli" || echo "Nessuna modifica da pushare"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
