--- a/.github/workflows/genera-prime.yml
+++ b/.github/workflows/genera-prime.yml
@@ -1,18 +1,30 @@
-name: Genera Prime Pagine AMP
+name: Aggiorna Prime Pagine AMP
 
 on:
   schedule:
-    - cron: '0 6 * * *' # ogni giorno alle 6:00 UTC
+    - cron: '0 5 * * *'   # 06:00 Italia
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - name: Genera Prime Pagine AMP
-        run: node amp/prime-pagine/scripts/genera-prime.js
+          node-version: 18
+
+      - name: Esegui script prime pagine
+        run: node scripts/genera-prime-pagine.js
+
+      - name: Commit e push aggiornamenti
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add amp/prime-pagine
+          git commit -m "Aggiornamento automatico prime pagine"
+          git push
